--- a/pi (copy).ini
+++ b/pi (copy).ini
@@ -1,5 +1,5 @@
 [Private]
-host = localhost
-user = admin
-password = Atulmandia@010999
-db = Banking_application
+host = YourHost
+user = YourUsername
+password = Your_Password
+db = database created by you.
