--- a/pi.ini
+++ b/pi.ini
@@ -1,5 +1,5 @@
 [Private]
-host = localhost
-user = admin
-password = Atulmandia@010999
-db = Banking_application
+host = Your host
+user = your user name
+password = Password for your workbench
+db = database created for the project
